package com.example.semesterexam.item;

import com.example.semesterexam.core.Subject;

public class Item extends Subject {

}
